<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_project"
        android:layout_below="@id/toolbar"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        android:padding="4dp">

        <EditText
            android:id="@+id/project_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/project_title"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textColorHint="#f2f2f2"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/client_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/enter_client_name"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textColorHint="#f2f2f2"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/project_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/project_description"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textColorHint="#f2f2f2"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/hourly_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/hourly_rate"
            android:inputType="numberDecimal"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textColorHint="#f2f2f2"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/project_additional_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/additional_information"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textColorHint="#f2f2f2"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/select_date"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:text="@string/select_start_date"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />


    </LinearLayout>


    <Button
        android:id="@+id/add_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:elevation="2dp"
        android:text="@string/add_project"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</RelativeLayout>