<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/about_app"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/other_apps_by_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/colorAccent"
        android:background="@color/colorAccent"
        android:text="@string/check_my_other_apps"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/other_apps_by_me"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/colorAccent"
        android:background="@color/colorAccent"
        android:text="@string/share_app"
        android:textColor="@color/white"
        android:textSize="15sp"
        />


    <Button
        android:id="@+id/rate_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/share_app"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/colorAccent"
        android:background="@color/colorAccent"
        android:text="@string/rate_app"
        android:textColor="@color/white"
        android:textSize="15sp"
        />


</RelativeLayout>