<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    >

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:gravity="center"
        android:text="00:00"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:weightSum="3">

        <Button
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/play"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/stop"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/reset"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_task"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <com.piotrek.customspinner.CustomSpinner
        android:id="@+id/tasks_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/add_time_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="#7a55be"
        android:background="#7a55be"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:text="@string/add_time_log"
        />

</LinearLayout>